@@ -37,15 +37,20 @@
 
     <property file="${bin.dir}/ts.jte"/>
     <property name="lib.dir" value="${ts.home}${file.separator}lib"/>
+	<property name="harness.dir" value="${ts.home}${file.separator}classes-harness"/>
     <property name="class.dir" value="${ts.home}${file.separator}classes"/>
 	<property name="class.pluggability.dir" value="${ts.home}${file.separator}classes-pluggability"/>
+	<property name="class.providers.dir" value="${ts.home}${file.separator}classes-providers"/>
     <property name="tests.dir" value="${ts.home}${file.separator}tests"/>
     <property name="work.dir" value="${ts.home}/JTwork"/>
-    <property name="report.dir" value="${ts.home}/JTreport"/>
+    <property name="report.api.dir" value="${ts.home}/JTreport"/>
+	<property name="report.pluggability.dir" value="${ts.home}/JTreport-Pluggability"/>
+	<mkdir dir="${harness.dir}"/>
     <mkdir dir="${class.dir}"/>
 	<mkdir dir="${class.pluggability.dir}"/>
+	<mkdir dir="${class.providers.dir}"/>
     <mkdir dir="${work.dir}"/>
-    <mkdir dir="${report.dir}"/>
+	<mkdir dir="${report.pluggability.dir}"/>
 
     <condition property="tests.arg" value="-tests ${tests}" else="">
             <isset property="tests"/>
@@ -55,7 +60,9 @@
             <isset property="debug"/>
     </condition>
 
-    <property name="class.path" value="${class.dir}${pathsep}${ts.home}/sigtest.jar${pathsep}${ts.home}/javatest.jar${pathsep}${JARPATH}/jakarta.activation-api.jar"/>
+	<property name="module.path" value="${API_JAR}"/>
+    <property name="class.path" value="${class.dir}${pathsep}${ts.home}/sigtest.jar${pathsep}${ts.home}/javatest.jar"/>
+	<property name="pluggability.class.path" value="${class.pluggability.dir}${pathsep}${ts.home}/javatest.jar"/>
 
     <!-- Does the current runtime support modules? -->
     <condition property="jdk.modules" value="false" else="true">
@@ -75,38 +82,79 @@
             description="Compiles all sources to the classes directory">
 		<javac includeantruntime="false" deprecation="yes"
 			source="11" target="11"
-			optimize="true" srcdir="tests"
-			classpath="${class.path}" destdir="${class.dir}"
-			debug="on" />
+			optimize="true" srcdir="tests/api"
+			classpath="${class.path}" modulepath="${module.path}" destdir="${class.dir}"
+			debug="on">
+			<compilerarg line="--add-modules ALL-MODULE-PATH"/>
+		</javac>
     	<javac includeantruntime="false" deprecation="yes"
     	            source="11" target="11"
-    	            optimize="true" srcdir="pluggability"
-    	            classpath="${class.path}" destdir="${class.pluggability.dir}"
-    	            debug="on" />
+    	            optimize="true" srcdir="tests/pluggability"
+    	            classpath="${class.path}" modulepath="${module.path}" destdir="${class.pluggability.dir}"
+    	            debug="on">
+    		<compilerarg line="--add-modules ALL-MODULE-PATH"/>
+    	</javac>
+        <javac includeantruntime="false" deprecation="yes"
+                     source="11" target="11"
+                     optimize="true" srcdir="providers"
+                     classpath="${class.path}" modulepath="${module.path}" destdir="${class.providers.dir}"
+                     debug="on">
+             <compilerarg line="--add-modules ALL-MODULE-PATH"/>
+         </javac>
+        <copy todir="${class.providers.dir}/META-INF">
+             <fileset dir="providers/META-INF"/>
+         </copy>
+    	<jar destfile="${class.providers.dir}/activation_alternate_provider.jar" basedir="${class.providers.dir}"/>
         <javac includeantruntime="false" deprecation="yes"
 			source="11" target="11"
 			optimize="true" srcdir="harness"
-			classpath="${class.path}" destdir="${class.dir}"
-			debug="on" />
-    	<copy todir="${class.pluggability.dir}/META-INF">
-    	    <fileset dir="pluggability/META-INF"/>
-    	</copy>
+			classpath="${class.path}" destdir="${harness.dir}"
+			debug="on">
+        </javac>
+    	<copy todir="${class.dir}">
+             <fileset dir="${harness.dir}"/>
+         </copy>
+        <copy todir="${class.pluggability.dir}">
+            <fileset dir="${harness.dir}"/>
+        </copy>
     </target>
 
 
     <target name="clean"
             description="Cleans all classes from the classes directory">
         <delete failonerror="false" includeEmptyDirs="true">
+        	<fileset dir="${harness.dir}" includes="*/**"/>
             <fileset dir="${class.dir}" includes="*/**"/>
         	<fileset dir="${class.pluggability.dir}" includes="*/**"/>
+        	<fileset dir="${class.providers.dir}" includes="*/**"/>
         </delete>
     </target>
 
     <target name="run"
             description="Executes the JAF TCK in batch mode">
-        <echo message="Classpath ${class.path}"/>
+    	<local name="ts.jte"/>
+        <local name="run.class.path"/>
+        <local name="report.dir"/>
+        <local name="test.suite"/>
+    	<property name="report.dir" value="${report.api.dir}"/>
+    	<property name="test.suite" value="tests/api"/>
+    	<property name="ts.jte" value="ts.jte"/>
+        <property name="run.class.path" value="${class.path}"/>
         <javatest.batch/>
     </target>
+	
+	<target name="run.pluggability"
+	            description="Executes the JAF TCK in batch mode">
+        <local name="ts.jte"/>
+        <local name="run.class.path"/>
+        <local name="report.dir"/>
+		<local name="test.suite"/>
+        <property name="report.dir" value="${report.pluggability.dir}"/>
+        <property name="test.suite" value="tests/pluggability"/>
+        <property name="ts.jte" value="ts.pluggability.jte"/>
+        <property name="run.class.path" value="${pluggability.class.path}"/>
+        <javatest.batch/>
+	</target>
 
     <target name="gui"
             description="Executes the JAF TCK in GUI mode">
@@ -138,11 +186,12 @@
           the javatest presetdef.
         -->
         <java classname="com.sun.javatest.tool.Main"
-              failonerror="${failOnError}" fork="yes" >
-            <classpath>
-                <pathelement path="${class.path}"/>
-            </classpath>	
-	    <sysproperty key="testDebug" value="${tests.debug}"/>
+              failonerror="${failOnError}" fork="yes" classpath="${run.class.path}" modulepath="${module.path}">
+        	<jvmarg line="--add-modules ALL-MODULE-PATH"/>
+        	<!--
+        	<jvmarg line="-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=8000"/>
+        	-->
+        	<sysproperty key="testDebug" value="${tests.debug}"/>
         </java>
     </presetdef>
 
@@ -155,13 +204,12 @@
           included XML below that shows the content of the javatest.batch
           presetdef.
         -->
-
         <javatest>
             <arg line=" -EsysProps" />
             <arg line=" -batch" />
-            <arg line=" -ts tests/testsuite.html" />
+            <arg line=" -ts ${test.suite}/testsuite.html" />
             <arg line=" -workdir ${work.dir}" />
-            <arg line=" -envFiles ${ts.home}/lib/ts.jte" />
+            <arg line=" -envFiles ${ts.home}/lib/${ts.jte}" />
             <arg line=" -env jafUnix" />
             <arg line=" -excludeList ${ts.home}/lib/ts.jtx" />
             <arg line=" -timeoutFactor 1" />
